<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">

    <TextView
        android:id="@+id/postAJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Post A Job"
        android:textColor="#FFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Fill out the information of the jobOffline below."
        android:textColor="#FFF"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postAJob"
        app:layout_constraintVertical_bias="0.4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:background="@drawable/bg_shape"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/jobTitle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/job_title"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/postAJob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/company"
            android:hint="@string/company"
            android:inputType="text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/jobTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/location"
            android:hint="@string/location"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <Spinner
            android:id="@+id/fieldSpinner"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/salary"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/salary"
            android:inputType="number"/>

        <RadioGroup
            android:id="@+id/salaryType"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/fieldSpinner"
            app:layout_constraintStart_toEndOf="@+id/salary"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <RadioButton
                android:id="@+id/monthly"
                android:text="@string/monthly"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hourly"
                android:layout_height="match_parent"
                android:layout_width="150dp"

                />
            <RadioButton
                android:id="@+id/hourly"
                android:text="@string/yearly"
                app:layout_constraintStart_toEndOf="@+id/monthly"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="match_parent"
                android:layout_width="150dp"
                />
        </RadioGroup>

        <Button
            android:id="@+id/postJobButton"
            android:text="@string/post_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="#FFF"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/salaryType"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/outputMsg"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/postJobButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldSpinner"
            app:layout_constraintVertical_bias="0.552" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>