...
    <string name="job_posting_response">Job Posting Response</string>
    <string name="job_posting_response_id">job_posting_response</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="see_job_map">See Job Map</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="job_post_success">Job posted successfully</string>
    <string name="job_missing_fields">Please complete all fields</string>

    <string name="enter_amount_to_be_paid">Enter Amount to be Paid</string>
    <string name="make_payment">Make Payment</string>
    <string name="type_the_keyword_here">Type the keyword here...</string>
    <string name="advance_job_search">Advance Job Search</string>
...
